--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -3,62 +3,24 @@
 
 <div class="booking-history">
 
-    <div class="booking-info clearfix">
+    <div ng-repeat="order in mdl.orders" class="booking-info clearfix">
         <h4 class="box-title">
             <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : 123456789</small>
+            <small>ID : {{order.id}}</small>
         </h4>
         <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>3 items
+            <i class="icon yellow-color circle"></i>{{order.items.length}} items
         </h4>
         <!--<h4 class="box-title col-lg-offset-1">
             <i class="icon soap-icon-departure yellow-color"></i>City,state,California
         </h4>-->
         <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>$ 340
+            <i class="icon yellow-color circle"></i>$ {{order.subtotal}}
         </h4>
 
-        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.view">View</button>
-        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.process">Process</button>
-
-    </div>
-    <div class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : 123456789</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>3 items
-        </h4>
-        <!--<h4 class="box-title col-lg-offset-1">
-            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>-->
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>$ 340
-        </h4>
-
-        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.view">View</button>
-        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.process">Process</button>
+        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.process({id:order.id})">Process</button>
 
     </div>
-    <div class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : 123456789</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>3 items
-        </h4>
-        <!--<h4 class="box-title col-lg-offset-1">
-            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>-->
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>$ 340
-        </h4>
 
-        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.view">View</button>
-        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.process">Process</button>
-
-    </div>
 
 </div>
