added date and time for order status

--- a/src/app/views/seller-account/orders/process/process.html
+++ b/src/app/views/seller-account/orders/process/process.html
@@ -3,12 +3,14 @@
     <li class="completed">
         <span class="bubble"></span>
         <i class="fa fa-check-circle"></i>
-        Confirmed
+        Confirmed<br/>
+        <small class="select-color">21 Aug, 2015 03:44:44</small>
     </li>
     <li class="completed">
         <span class="bubble"></span>
         <i class="fa fa-check-circle"></i>
-        Approved
+        Approved<br/>
+        <small class="select-color">21 Aug, 2015 03:44:44</small>
     </li>
     <li>
         <span class="bubble"></span>
