process equipment integration

--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -18,7 +18,7 @@
             <i class="icon yellow-color circle"></i>$ {{order.subtotal}}
         </h4>
 
-        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.process({id:order.id})">Process</button>
+        <button class="btn-mini status" ui-sref="main.sellerAccount.orders.view({id:order.id})">View</button>
 
     </div>
 
