--- a/src/app/views/seller-account/invoices/list/list.html
+++ b/src/app/views/seller-account/invoices/list/list.html
@@ -1,4 +1,28 @@
-<h1>List</h1>
+<div>
+    <h2>Invoices</h2>
+
+    <div class="booking-history">
+        <div class="booking-info clearfix">
+            <h5 class="box-title col-md-3">
+                <i class="icon soap-icon-card yellow-color circle"></i>Invoice
+                <small>ID : 1234566789</small>
+            </h5>
+            <h5 class="box-title col-md-2">
+                <i class="icon yellow-color circle"></i>Paid
+            </h5>
+            <h5 class="box-title col-md-1">
+                <i class="icon yellow-color circle"></i>Approved
+            </h5>
+            <h5 class="box-title col-md-2 col-lg-offset-1">
+                <i class="icon yellow-color circle"></i>$ 1200
+            </h5>
+            <button class="btn-mini status" ui-sref="main.sellerAccount.invoices.view({id:0})">View Details</button>
+        </div>
+    </div>
+</div>
+
+
+<!--
 <button ui-sref="main.sellerAccount.invoices.list">View</button>
 <button ui-sref="main.sellerAccount.invoices.edit({id:0})">Edit</button>
-<button ui-sref="main.sellerAccount.invoices.view({id:0})">View</button>
+<button ui-sref="main.sellerAccount.invoices.view({id:0})">View</button>-->
