--- a/src/app/views/seller-account/inquiries/inquiries.html
+++ b/src/app/views/seller-account/inquiries/inquiries.html
@@ -1,1 +1,62 @@
-<h1>Inquiries</h1>
+<div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
+    <div class="guest-reviews">
+    <h2>Inquiries</h2>
+    <div class="guest-review table-wrapper">
+        <div class="col-xs-3 col-md-2 author table-cell">
+            <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263" /></a>
+            <p class="name">Jessica Brown</p>
+            <p class="date">NOV, 12, 2013</p>
+        </div>
+        <div class="col-xs-9 col-md-10 table-cell comment-container">
+            <div class="comment-header clearfix">
+                <h4 class="comment-title">We had great experience while our stay and Hilton Hotels!</h4>
+                <div class="review-score">
+                    <div class="five-stars-container"><div class="five-stars" style="width: 80%;"></div></div>
+                    <span class="score">4.0/5.0</span>
+                </div>
+            </div>
+            <div class="comment-content">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+            </div>
+        </div>
+    </div>
+    <div class="guest-review table-wrapper">
+        <div class="col-xs-3 col-md-2 author table-cell">
+            <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263" /></a>
+            <p class="name">David Jhon</p>
+            <p class="date">NOV, 12, 2013</p>
+        </div>
+        <div class="col-xs-9 col-md-10 table-cell comment-container">
+            <div class="comment-header clearfix">
+                <h4 class="comment-title">I love the speediness of their services.</h4>
+                <div class="review-score">
+                    <div class="five-stars-container"><div class="five-stars" style="width: 64%;"></div></div>
+                    <span class="score">3.2/5.0</span>
+                </div>
+            </div>
+            <div class="comment-content">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+            </div>
+        </div>
+    </div>
+    <div class="guest-review table-wrapper">
+        <div class="col-xs-3 col-md-2 author table-cell">
+            <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263" /></a>
+            <p class="name">Kyle Martin</p>
+            <p class="date">NOV, 12, 2013</p>
+        </div>
+        <div class="col-xs-9 col-md-10 table-cell comment-container">
+            <div class="comment-header clearfix">
+                <h4 class="comment-title">When you look outside from the windows its breath taking.</h4>
+                <div class="review-score">
+                    <div class="five-stars-container"><div class="five-stars" style="width: 76%;"></div></div>
+                    <span class="score">3.8/5.0</span>
+                </div>
+            </div>
+            <div class="comment-content">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
