Inquiry UI - WIP

--- a/src/app/views/seller-account/inquiries/list/list.html
+++ b/src/app/views/seller-account/inquiries/list/list.html
@@ -15,10 +15,10 @@
                     <h4 class="comment-title">We had great experience while our stay and Hilton Hotels!</h4>
 
                     <div class="review-score">
-                        <div class="five-stars-container">
+                        <!--<div class="five-stars-container">
                             <div class="five-stars" style="width: 80%;"></div>
-                        </div>
-                        <span class="score">4.0/5.0</span>
+                        </div>-->
+                        <a class="button btn-mini green-bg">View Conversation</a>
                     </div>
                 </div>
                 <div class="comment-content">
