Inquiry UI - WIP 2

--- a/src/app/views/seller-account/inquiries/list/list.html
+++ b/src/app/views/seller-account/inquiries/list/list.html
@@ -4,7 +4,7 @@
 
         <div class="guest-review table-wrapper">
             <div class="col-xs-3 col-md-2 author table-cell">
-                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
+                <a class="list-conversations" href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
 
                 <p class="name">Jessica Brown</p>
 
