--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -3437,20 +3437,20 @@ ul.search-tabs {
   border-top: 1px solid #f5f5f5;
   &:last-child { border-bottom: 1px solid #f5f5f5; }
   .author {
-    text-align: center; border-right: 1px solid #f5f5f5; padding-top: 25px; padding-bottom: 25px;
-    > a { width: 74px; height: 74px; }
+    text-align: center; border-right: 1px solid #f5f5f5; padding-top: 14px; /*padding-bottom: 25px;*/
+    > a { width: 74px; height: 74px; } a.list-conversations {width: 50px; height: 50px;}
     img { width: 100%; height: 100%; }
     .name { color: $heading-color; font-size: 1.0833em; margin-bottom: 0; }
     .date { text-transform: uppercase; font-size: 0.8333em; }
   }
   .comment-container {
-    padding-top: 25px; padding-bottom: 25px;
+    padding-top: 15px; /*padding-bottom: 25px;*/
     .comment-title { color: $skin-active-color; float: left; font-style: italic; }
     .review-score {
       float: right;
       .score { font-size: 2em; margin-left: 10px; }
     }
-    .comment-content p { line-height: 2em; }
+    .comment-content p { line-height: 1.5em; }
   }
 }
 
