--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -178,8 +178,9 @@
         </div>
     </div>
 </section>
-<div class="global-map-area section parallax" data-stellar-background-ratio="0.5">
-    <div class="container description text-center">
+<div class="section parallax" data-stellar-background-ratio="0.5"> <!-- style="background-image: url('../assets/images/marketplace.png');"-->
+    <img src="../assets/images/marketplace.png" class="img-responsive" />
+    <!--<div class="container description text-center">
         <h1>How Travelo Works?</h1>
         <br>
         <div class="travelo-process">
@@ -221,7 +222,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
+
 </div>
 <footer id="footer">
     <div class="bottom">
