--- a/src/app/views/seller-account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/seller-account/settings/additional-charges/additional-charges.html
@@ -106,7 +106,7 @@
             </tags-input>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-1">
-            <button class="button btn-mini uppercase green" ng-click="chargesMdl.add()">Add</button>
+            <button class="button btn-mini uppercase green" style="width: auto" ng-click="chargesMdl.add()">Add</button>
         </div>
     </form>
 
