--- a/src/app/views/seller-account/inquiries/list/list.html
+++ b/src/app/views/seller-account/inquiries/list/list.html
@@ -1,82 +1,137 @@
 <div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
-    <div class="guest-reviews">
+    <div class="guest-reviews conversation-list">
         <h2>Inquiries</h2>
 
         <div class="guest-review table-wrapper">
-            <div class="col-xs-3 col-md-2 author table-cell">
-                <a class="list-conversations" href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
-
+            <div class="col-xs-3 col-md-3 author table-cell">
                 <p class="name">Jessica Brown</p>
-
-                <p class="date">NOV, 12, 2013</p>
             </div>
-            <div class="col-xs-9 col-md-10 table-cell comment-container">
+            <div class="col-xs-9 col-md-6 table-cell comment-container">
                 <div class="comment-header clearfix">
-                    <h4 class="comment-title">We had great experience while our stay and Hilton Hotels!</h4>
-
-                    <div class="review-score">
-                        <!--<div class="five-stars-container">
-                            <div class="five-stars" style="width: 80%;"></div>
-                        </div>-->
-                        <a class="button btn-mini green-bg">View Conversation</a>
-                    </div>
+                    <h4 class="comment-title">Subject Line goes here subject line here</h4>
                 </div>
-                <div class="comment-content">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+            </div>
+            <div class="col-xs-9 col-md-3 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <div class="review-score">
+                        <a class="button btn-mini green-bg pull-right" ui-sref="main.sellerAccount.inquiries.view({id:0})">View</a>
+                        <a class="button btn-mini green-bg pull-right">Reply</a>
+                        <a class="button btn-mini green-bg pull-right">Delete</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="guest-review table-wrapper">
-            <div class="col-xs-3 col-md-2 author table-cell">
-                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
-
-                <p class="name">David Jhon</p>
-
-                <p class="date">NOV, 12, 2013</p>
+            <div class="col-xs-3 col-md-3 author table-cell">
+                <p class="name">Jessica Brown</p>
             </div>
-            <div class="col-xs-9 col-md-10 table-cell comment-container">
+            <div class="col-xs-9 col-md-6 table-cell comment-container">
                 <div class="comment-header clearfix">
-                    <h4 class="comment-title">I love the speediness of their services.</h4>
-
-                    <div class="review-score">
-                        <div class="five-stars-container">
-                            <div class="five-stars" style="width: 64%;"></div>
-                        </div>
-                        <span class="score">3.2/5.0</span>
-                    </div>
+                    <h4 class="comment-title">Subject Line goes here subject line here</h4>
                 </div>
-                <div class="comment-content">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+            </div>
+            <div class="col-xs-9 col-md-3 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <div class="review-score">
+                        <a class="button btn-mini green-bg pull-right">View</a>
+                        <a class="button btn-mini green-bg pull-right">Reply</a>
+                        <a class="button btn-mini green-bg pull-right">Delete</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="guest-review table-wrapper">
-            <div class="col-xs-3 col-md-2 author table-cell">
-                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
-
-                <p class="name">Kyle Martin</p>
-
-                <p class="date">NOV, 12, 2013</p>
+            <div class="col-xs-3 col-md-3 author table-cell">
+                <p class="name">Jessica Brown</p>
             </div>
-            <div class="col-xs-9 col-md-10 table-cell comment-container">
+            <div class="col-xs-9 col-md-6 table-cell comment-container">
                 <div class="comment-header clearfix">
-                    <h4 class="comment-title">When you look outside from the windows its breath taking.</h4>
-
+                    <h4 class="comment-title">Subject Line goes here subject line here</h4>
+                </div>
+            </div>
+            <div class="col-xs-9 col-md-3 table-cell comment-container">
+                <div class="comment-header clearfix">
                     <div class="review-score">
-                        <div class="five-stars-container">
-                            <div class="five-stars" style="width: 76%;"></div>
-                        </div>
-                        <span class="score">3.8/5.0</span>
+                        <a class="button btn-mini green-bg pull-right">View</a>
+                        <a class="button btn-mini green-bg pull-right">Reply</a>
+                        <a class="button btn-mini green-bg pull-right">Delete</a>
                     </div>
                 </div>
-                <div class="comment-content">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+            </div>
+        </div>
+        <div class="guest-review table-wrapper">
+            <div class="col-xs-3 col-md-3 author table-cell">
+                <p class="name">Jessica Brown</p>
+            </div>
+            <div class="col-xs-9 col-md-6 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <h4 class="comment-title">Subject Line goes here subject line here</h4>
+                </div>
+            </div>
+            <div class="col-xs-9 col-md-3 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <div class="review-score">
+                        <a class="button btn-mini green-bg pull-right">View</a>
+                        <a class="button btn-mini green-bg pull-right">Reply</a>
+                        <a class="button btn-mini green-bg pull-right">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="guest-review table-wrapper">
+            <div class="col-xs-3 col-md-3 author table-cell">
+                <p class="name">Jessica Brown</p>
+            </div>
+            <div class="col-xs-9 col-md-6 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <h4 class="comment-title">Subject Line goes here subject line here</h4>
+                </div>
+            </div>
+            <div class="col-xs-9 col-md-3 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <div class="review-score">
+                        <a class="button btn-mini green-bg pull-right">View</a>
+                        <a class="button btn-mini green-bg pull-right">Reply</a>
+                        <a class="button btn-mini green-bg pull-right">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="guest-review table-wrapper">
+            <div class="col-xs-3 col-md-3 author table-cell">
+                <p class="name">Jessica Brown</p>
+            </div>
+            <div class="col-xs-9 col-md-6 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <h4 class="comment-title">Subject Line goes here subject line here</h4>
+                </div>
+            </div>
+            <div class="col-xs-9 col-md-3 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <div class="review-score">
+                        <a class="button btn-mini green-bg pull-right">View</a>
+                        <a class="button btn-mini green-bg pull-right">Reply</a>
+                        <a class="button btn-mini green-bg pull-right">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="guest-review table-wrapper">
+            <div class="col-xs-3 col-md-3 author table-cell">
+                <p class="name">Jessica Brown</p>
+            </div>
+            <div class="col-xs-9 col-md-6 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <h4 class="comment-title">Subject Line goes here subject line here</h4>
+                </div>
+            </div>
+            <div class="col-xs-9 col-md-3 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <div class="review-score">
+                        <a class="button btn-mini green-bg pull-right">View</a>
+                        <a class="button btn-mini green-bg pull-right">Reply</a>
+                        <a class="button btn-mini green-bg pull-right">Delete</a>
+                    </div>
                 </div>
             </div>
         </div>
