--- a/src/app/views/seller-account/inquiries/view/view.html
+++ b/src/app/views/seller-account/inquiries/view/view.html
@@ -1,1 +1,100 @@
-<h1>View</h1>
+<div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
+    <div class="guest-reviews single-conversation">
+        <h2>Your Conversation with "Jessica Brown"</h2>
+
+        <div class="guest-review table-wrapper my-message">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <p class="name">Inquiry</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <h4 class="comment-title">Want to rent Excavator for 3 months on different locations.</h4>
+                </div>
+            </div>
+        </div>
+        <div class="guest-review table-wrapper">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
+
+                <p class="name">David Jhon</p>
+
+                <p class="date">NOV, 12, 2013</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-content">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="guest-review table-wrapper my-message">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
+
+                <p class="name">Kyle Martin</p>
+
+                <p class="date">NOV, 12, 2013</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-content">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                </div>
+            </div>
+        </div>
+        <div class="guest-review table-wrapper">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
+
+                <p class="name">David Jhon</p>
+
+                <p class="date">NOV, 12, 2013</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-content">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="guest-review table-wrapper my-message">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
+
+                <p class="name">Kyle Martin</p>
+
+                <p class="date">NOV, 12, 2013</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-content">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                </div>
+            </div>
+        </div>
+        <div class="guest-review table-wrapper my-message">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
+
+                <p class="name">David Jhon</p>
+
+                <p class="date">NOV, 12, 2013</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-content">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
