Added Inquiry Reply UI and Inquiry Button

--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5172,4 +5172,9 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
     }
   }
 }
+.reply-text-area {
+  height: 250px;
+  width: 100%;
+  background-color: #FFF;
+}
 /* custom style ends*/
