--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -774,6 +774,8 @@
 
             <p></p>
             <a process-indicator="PI:AddToFavorite" ng-click="addToFavorite()" class="button yellow full-width uppercase btn-small">Add to Favourites</a>
+            <p></p>
+            <a process-indicator="PI:AddToFavorite" ng-click="addToFavorite()" class="button yellow full-width uppercase btn-small">Send Inquiry</a>
 
         </div>
     </article>
@@ -784,7 +786,7 @@
         <address class="contact-details">
             <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-MKTPLACE</span>
             <br>
-            <a class="contact-email"  >help@marketplace.com</a>
+            <a class="contact-email">help@marketplace.com</a>
         </address>
     </div>
     <!--<div class="travelo-box">
@@ -842,6 +844,7 @@
                 <p>Nunc cursus libero pur congue arut nimspnty.</p>
             </li>
             <li>
+                <i class="soap-icon-support circle"></i>
                 <i class="soap-icon-support circle"></i>
                 <h5 class="title"><a  >Excellent Support</a></h5>
 
