--- a/src/app/views/seller-account/inquiries/view/view.html
+++ b/src/app/views/seller-account/inquiries/view/view.html
@@ -88,9 +88,8 @@
             </div>
             <div class="col-xs-9 col-md-10 table-cell comment-container">
                 <div class="comment-content">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's stand dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                    <textarea class="reply-text-area"></textarea>
+                    <a class="button btn-medium green" style="margin-bottom: 20px; margin-top: 10px;">Send</a>
                 </div>
             </div>
 
