--- a/src/app/views/seller-account/inquiries/new/new.html
+++ b/src/app/views/seller-account/inquiries/new/new.html
@@ -1,1 +1,36 @@
-<h1>New Inquiry</h1>
+<div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
+    <div class="guest-reviews single-conversation">
+        <h2>Your Conversation with "Jessica Brown"</h2>
+
+        <div class="guest-review table-wrapper my-message">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <p class="name">Subject</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <h4 class="comment-title" style="width: 100%; font-style: normal; font-size: 14px;">
+                        <input type="text" placeholder="Subject" class="subject-line" />
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="guest-review table-wrapper my-message">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
+
+                <p class="name">David Jhon</p>
+
+                <p class="date">NOV, 12, 2013</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-content">
+                    <textarea class="reply-text-area"></textarea>
+                    <a class="button btn-medium green" style="margin-bottom: 20px; margin-top: 10px;">Send</a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
