Added Equipment Name to New Enquiry Form

--- a/src/app/views/seller-account/inquiries/new/new.html
+++ b/src/app/views/seller-account/inquiries/new/new.html
@@ -1,7 +1,16 @@
 <div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
     <div class="guest-reviews single-conversation">
         <h2>Your Conversation with "Jessica Brown"</h2>
-
+        <div class="guest-review table-wrapper my-message">
+            <div class="col-xs-3 col-md-2 author table-cell">
+                <p class="name">Inquiry for</p>
+            </div>
+            <div class="col-xs-9 col-md-10 table-cell comment-container">
+                <div class="comment-header clearfix">
+                    <h4 class="comment-title">Equipment Name</h4>
+                </div>
+            </div>
+        </div>
         <div class="guest-review table-wrapper my-message">
             <div class="col-xs-3 col-md-2 author table-cell">
                 <p class="name">Subject</p>
@@ -14,7 +23,6 @@
                 </div>
             </div>
         </div>
-
         <div class="guest-review table-wrapper my-message">
             <div class="col-xs-3 col-md-2 author table-cell">
                 <a href="#"><img src="http://placehold.it/270x263" alt="" width="270" height="263"/></a>
