--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -9,9 +9,10 @@
                 </a>
             </div>
             <h4 class="box-title">
-                <i class="icon soap-icon-departure takeoff-effect yellow-color circle"></i>{{pro.name}}
+                <i class="icon soap-icon-heart yellow-color"></i>{{pro.name}}
             </h4>
             <button class="btn-mini status" ui-sref="main.equiDetails({id:pro.id})">View</button>
+            <button class="btn-mini status">Unfavourite</button>
         </div>
 
     </div>
